@@ -1,5 +1,5 @@
 name    = Gtk3
-version = 0.001
+version = 0.002
 author  = Torsten Schoenfeld <kaffeetisch@gmx.de>
 license = LGPL_2_1
 copyright_holder = Torsten Schoenfeld
@@ -28,6 +28,7 @@ format = Overview of changes in Gtk3 %v [%{yyyy-MM-dd}d]%n======================
 changelog = NEWS
 commit_msg = Release v%v%n%n%c
 [Git::Tag]
+signed = 1
 [Git::Push]
 
 [TestRelease]
