@@ -1,3 +1,9 @@
+Overview of changes in Gtk3 0.002 [2011-12-09]
+==============================================
+
+* Add more overrides for the tree objects
+* Fix a test failure (RT #72773)
+
 Overview of changes in Gtk3 0.001 [2011-10-14]
 ==============================================
 
